--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,13 +1,20 @@
 <!doctype html>
 <head>
 <meta charset="utf-8" />
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+<script src="/javascripts/parallax.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 <body>
 <div class="container">
   <div class="row">
+  <div class="col-xs-12">
+  <div class="parallax-window" data-parallax="scroll" data-image-src="/images/space-bg.jpg"></div>
+
+
+  </div>
     <div class="col-xs-12">
-      <h2 class="top-text-index_page">Our latest sites</h2>
+      <h2 class="top-text-index_page">Our latest projects</h2>
     </div>
     <% @projects.each do |p| %>
     <div class="col-xs-4">
